--- a/src/styles/base/_config.css
+++ b/src/styles/base/_config.css
@@ -4,4 +4,14 @@
     --dm-color-tertiary: #2F2F2F;
     --dm-color-black: #444;
     --dm-color-white: #FFFFFF;
+
+    --a: #FFAF00;
+    --b: #4C4C4C;
+    --c: #F2F2F2;
+    --d: #FF5733;
+    --e: #2196F3 ;
+    --f: #7B1FA2;
+    --g: #FFB300;
+    --h: #0066CC;
+    --i: #8B0000; 
 }
