--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -1,37 +1,47 @@
-header {
+.header {
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+    background: var(--dm-color-white);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 5rem;
     height: 5rem;
 }
-a {
+.a {
+    color: var(--dm-color-tertiary);
     width: 20%;
     font-weight: bold;
     font-size: 1.5rem;
     text-decoration: none;
+    transition: color 0.5s ease-in-out;
 }
-nav {
+.a:hover {
+    color: var(--dm-color-primary);
+}
+.nav {
     width: 60%;
 }
-ul {
+.ul {
     list-style: none;
     width: 100%;
     display: flex;
     justify-content: space-between;
     font-weight: 600;
 }
-li {
+.ul li {
+    color: var(--dm-color-tertiary);
     cursor: pointer;
     padding: .5rem 0;
     border-bottom: .2rem solid transparent;
     transition: border-bottom-color 0.5s ease-in-out;
 }
-li:hover {
-    color: red;
-    border-bottom: .2rem solid red;
+.ul li:hover {
+    color: var(--dm-color-primary);
+    border-bottom: .2rem solid var(--dm-color-primary);
 }
 .active {
-    color: red;
-    border-bottom: .2rem solid red;
+    color: var(--dm-color-primary) !important;
+    border-bottom: .2rem solid var(--dm-color-primary) !important;
 }
