--- a/src/styles/components/skills.module.css
+++ b/src/styles/components/skills.module.css
@@ -21,10 +21,11 @@
     padding: 2rem;
 }
 .skill {
-    width: 125px;
-    height: 125px;
+    width: 20%;
+    /* height: 20%; */
     background-color: var(--dm-color-tertiary);
     border-radius: 10px;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,5 +35,6 @@
     font-size: 1.5rem;
 }
 .name {
+    font-size: 1.2rem;
     color: var(--c);
 }
