--- a/src/styles/components/about.module.css
+++ b/src/styles/components/about.module.css
@@ -1,18 +1,39 @@
-.about {
-    min-height: 100vh;
-    padding: 0 12rem;
-    margin: 3rem 0;
+.title {
+    text-align: center;
+    padding: 2rem 0 0 0;
+    font-size: 2rem;
 }
-.top {
+.content {
+    min-height: 100vh;
+    padding: 0 10rem;
+    display: flex;
+}
+.left {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 40%;
+    padding: 3rem;
 }
-.h2 {
-    font-size: 2rem;
+.right {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    padding: 3rem 0;
+}
+.h3 {
+    font-size: 1.5rem;
+    margin-top: 0;
+    margin-bottom: .5rem;
+}
+.span {
+    font-weight: 500;
+}
+.p {
+    font-family: "Nunito", sans-serif;
+    font-weight: 500;
 }
 .img {
     border-radius: 10px;
-    margin: 3rem 0;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
 }
