--- a/src/styles/components/skills.module.css
+++ b/src/styles/components/skills.module.css
@@ -17,12 +17,11 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    gap: 1.5rem 1rem;
+    /* gap: 1rem .5rem; */
     padding: 2rem;
 }
 .skill {
     width: 20%;
-    /* height: 20%; */
     background-color: var(--dm-color-tertiary);
     border-radius: 10px;
     padding: 1rem;
@@ -30,6 +29,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1rem .5rem;
 }
 .icon {
     font-size: 1.5rem;
