--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     z-index: 2;
     width: 100%;
-    background: var(--dm-color-white);
+    background: var(--dm-color-white-1);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,7 +11,7 @@
     box-shadow: 0 1px 4px rgba(146, 161, 176, 0.3)
 }
 .a {
-    color: var(--dm-color-tertiary);
+    color: var(--dm-color-tertiary-1);
     width: 20%;
     font-weight: bold;
     font-size: 1.5rem;
@@ -19,7 +19,7 @@
     transition: color 0.5s ease-in-out;
 }
 .a:hover {
-    color: var(--dm-color-primary);
+    color: var(--dm-color-secondary-1);
 }
 .nav {
     width: 60%;
@@ -32,17 +32,17 @@
     font-weight: 600;
 }
 .ul li {
-    color: var(--dm-color-tertiary);
+    color: var(--dm-color-tertiary-1);
     cursor: pointer;
     padding: .5rem 0;
     border-bottom: .2rem solid transparent;
     transition: border-bottom-color 0.5s ease-in-out;
 }
 .ul li:hover {
-    color: var(--dm-color-primary);
-    border-bottom: .2rem solid var(--dm-color-primary);
+    color: var(--dm-color-secondary-1);
+    border-bottom: .2rem solid var(--dm-color-secondary-1);
 }
 .active {
-    color: var(--dm-color-primary) !important;
-    border-bottom: .2rem solid var(--dm-color-primary) !important;
+    color: var(--dm-color-secondary-1) !important;
+    border-bottom: .2rem solid var(--dm-color-secondary-1) !important;
 }
