--- a/src/styles/base/_config.css
+++ b/src/styles/base/_config.css
@@ -1,5 +1,6 @@
 :root {
-    --dm-color-primary: #0A192F;
+    /* --dm-color-primary: #0A192F; */
+    --dm-color-primary: #FFB300;
     --dm-color-primary-2: #243447; 
     --dm-color-primary-3: #415A77;
     --dm-color-primary-4: #607890;
