--- a/src/styles/components/home.module.css
+++ b/src/styles/components/home.module.css
@@ -65,7 +65,7 @@ button .span {
 }
 .icon {
     font-size: 20px;
-    color: var(--dm-color-primary);
+    color: var(--dm-color-primary-1);
     transition: color 0.2s ease-in-out;
 }
 .icon:hover {
