--- a/src/styles/components/skills.module.css
+++ b/src/styles/components/skills.module.css
@@ -1,6 +1,6 @@
 .skills {
     min-height: 100vh;
-    background-color: var(--dm-color-primary);
+    background-color: var(--a);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,7 +10,7 @@
     font-size: 2rem;
 }
 .wrapper {
-    background-color: var(--a);
+    background-color: var(--b);
     width: 75%;
     height: 75%;
     border-radius: 15px;
@@ -21,7 +21,7 @@
 }
 .skill {
     width: 20%;
-    background-color: var(--dm-color-tertiary);
+    background-color: var(--a);
     border-radius: 10px;
     padding: 1rem;
     display: flex;
