--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     z-index: 2;
     width: 100%;
-    background: var(--dm-color-white-1);
+    background: var(--bg-secondary);
     display: flex;
     justify-content: space-between;
     align-items: center;
