--- a/src/styles/components/home.module.css
+++ b/src/styles/components/home.module.css
@@ -5,7 +5,20 @@
     justify-content: center;
     align-items: center;
     padding: 2rem 8rem 0;
-    background-color: var(--dm-color-primary);
+    background-color: #1E1F28;
+    position: relative;
+}
+.home:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image:
+        linear-gradient(to right, rgba(255, 255, 255, 0.02) 1px, transparent 1px),
+        linear-gradient(to bottom, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
+    background-size: 25px 25px;
 }
 .content {
     display: flex;
