--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -2,13 +2,12 @@
     position: fixed;
     z-index: 2;
     width: 100%;
-    background: var(--bg-secondary);
+    background: transparent;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 5rem;
     height: 5rem;
-    box-shadow: 0 1px 4px rgba(146, 161, 176, 0.3)
 }
 .a {
     color: var(--dm-color-tertiary-1);
