--- a/src/styles/components/home.module.css
+++ b/src/styles/components/home.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     padding: 2rem 8rem 0;
-    background-color: #1E1F28;
+    background-color: var(--bg-primary);
     position: relative;
 }
 .home:before {
@@ -29,25 +29,26 @@
 .h1 {
     font-size: 3rem;
     margin-bottom: 0;
-    color: var(--dm-color-white-1);
+    color: var(--color-light);
 }
 .p {
     font-size: 2rem;
 }
 .p span {
-    color: var(--dm-color-white-1);
+    color: var(--color-light);
 }
 .button {
     width: 40%;
     padding: 15px;
-    background-color: var(--dm-color-white-1);
-    color: var(--dm-color-primary-1);
+    background-color: var(--color-primary);
+    color: var(--color-light);
     border: 1px;
     border-radius: 25px;
     font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2;
 }
 .button:hover {
     cursor: pointer;
@@ -69,18 +70,20 @@ button .span {
 .ul li {
     width: 45px;
     height: 45px;
-    background: var(--dm-color-light);
+    background: var(--bg-secondary);
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    z-index: 2;
 }
 .icon {
     font-size: 20px;
-    color: var(--dm-color-primary-1);
+    color: var(--color-light);
     transition: color 0.2s ease-in-out;
 }
-.icon:hover {
-    color: var(--dm-color-primary);
+.ul li:hover {
+    color: var(--dm-color-tertiary);
+    background-color: var(--emphasi-1);
 }
