Work of Thuersday

--- a/src/styles/base/_config.css
+++ b/src/styles/base/_config.css
@@ -19,6 +19,7 @@
     --v2-bg-fifth: #fcff64;
     --v2-bg-sixth: #ffffc7;
 
+    --v2-color-black: #1b1b1b;
     /* --a: #FFAF00;
     --b: #4C4C4C;
     --c: #F2F2F2;
